--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 #todo {
     font-family: 'Raleway', sans-serif;
     background-color: #F5F5F5;
-    width: 1440px;
+    width: 75vw;
     margin: 3vh auto;
     color: #464646;
 }
@@ -49,12 +49,12 @@
 .intro {
     width: 40vw;
     font-size: 22px;
-    margin-bottom: 2vh;
+    margin-bottom: 3vh;
 }
 
 .contacto {
     display: flex;
-    justify-content: center;
+    justify-content: start;
 }
 
 .contacto li {
