--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,18 @@
 
 .header{
     display: flex;
-    justify-content: start;
+    justify-content: space-between;
     align-items: center;
 }
 
+.logoIndio {
+    width: 1.5vw;
+}
+.logoNombre {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .nombreCompleto {
     margin-left: 1vw;
     font-weight: bold;
@@ -27,10 +35,7 @@
 
 .menu{
     display: flex;
-    position: absolute;
-    margin-top: 1vh;
-    top: 5vh;
-    right: 10vw;
+    
 }
 
 .menu li {
@@ -50,6 +55,7 @@
 
 .primeraImpresion {
     display: flex;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -67,7 +73,7 @@
 }
 
 .oracleImg {
-    width: 5vw;
+    width: 125px;
 }
 
 .oracleImg:hover {
@@ -89,7 +95,8 @@
 
 .contacto li {
     margin-right: 2vw;
-    font-size: large
+    font-size: large;
+    font-weight: normal;
 }
 
 .contacto li:hover {
@@ -111,7 +118,7 @@
 }
 
 .sobreMiContainer {
-    padding: 10vh 10vw;
+    padding: 6vh 10vw;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -119,7 +126,7 @@
 }
 
 .tituloSobreMi {
-    font-size: 52px;
+    font-size: 32px;
     font-weight: bold;
 }
 
@@ -137,31 +144,30 @@
 }
 
 .skillsContainer, .hobbiesContainer {
+    margin-bottom: 10vh;
     display: flex;
     justify-content: space-evenly;
+
 }
 
-.skill {
+.skillHobbie {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     width: 175px;
     height: 175px;
     background-color: hsl(0, 0%, 100%);
 }
 
-.skill p {
-    margin: .5vh 0;
-}
 .logos {
-    width: 2vw;
+    width: 50px;
 }
 
 .logos:hover {
     transform: scale(1.5);
-    filter: drop-shadow(2px 4px 1px hsl(300, 75%, 40%));
-    transition: .5s all;
+    filter: drop-shadow(2px 4px 1px hsl(210, 83%, 75%));
+    transition: .1s all;
 }
 
 .formacionContainer {
@@ -173,11 +179,10 @@
 }
 .formacion {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
 }   
 
 .cursos {
-    
     margin-right: 1vw;
 }
 
@@ -199,13 +204,23 @@
     flex-direction: column;
     justify-content: space-between;
 }
+
 .proyectosContainer {
     margin: 3vh 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
     gap: 3vw;
-    
+}
+
+.detallesContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.proyectoImg{
+    width: 50vw; 
 }
 
 .nombreProyecto {
@@ -213,10 +228,6 @@
     margin-bottom: 1vh;
     font-size: 22px;
     font-weight: bold;
-}
-
-.proyectoImg{
-    width: 40vw; 
 }
 
 .repoBtn {
@@ -258,7 +269,7 @@
 }
 
 .telefonoImg {
-    width: 30vw;
+    width: 750px;
 }
 
 .telefonoContainer {
@@ -289,7 +300,7 @@
     height: 7vh;
     background-color: white;
     border-radius: 5px;
-    border-bottom: 1px solid #C8C8C8;
+    border-bottom: 1px solid hsla(0, 0%, 78%);
 }
 
 .mensaje {
@@ -297,8 +308,8 @@
 }
 
 .enviarMsj {
-    width: 8vw;
-    height: 7vh;
+    width: 133px;
+    height: 40px;
     margin-top: 2vh;
     text-align: center;
     background-color: hsl(214, 77%, 52%);
@@ -319,20 +330,187 @@ input::placeholder {
 }
 
 h6 {
-    margin: 1vh 0;
+    padding: 2vh 0;
     color: #464646;
     text-align: center;
 }
 
-
 .volverInicio {
     width: 3vw;
     position: fixed;
-    left: 92vw;
-    bottom: 8vh;
+    right: 3vw;
+    bottom: 5vh;
 }
 
 .volverInicio:hover {
     transform: scale(1.2);
     transition: 1s all;
+}
+
+/*Media queries*/
+@media (max-width: 900px) { 
+    .header, .primeraImpresion, .skillsHobbies, .experienciaContainer {
+        margin: 5vh 5vw;
+    }
+    .header{
+        display: none;
+    }
+
+    .presentacion {
+        width: 60vw;
+        font-size: 22px;
+        font-weight: bold;
+        margin-bottom: 2vh;
+    }
+
+    .intro {
+        width: 60vw;
+        font-size: 16px;
+        margin-bottom: 2vh;
+    }
+    
+    .oracleImg {
+        width: 90px;
+    }
+
+    .contacto li {
+        margin-right: 2vw;
+        font-size: 16px;
+    }
+
+    .perfil {
+        width: 20vw;
+        margin-left: 5vw;
+    }
+
+    .sobreMiContainer {
+        padding: 5vh 5vw;
+    }
+
+    .parrafos {
+        padding-right: 0;
+        font-size: 14px;
+    }
+
+    .tituloSobreMi {
+        margin-bottom: 2vh;
+    }
+
+    .skillsTitulo, .hobbiesTitulo, .formacionTitulo, .xpTitulo, .tituloSobreMi {
+        font-size: 22px;
+    }
+
+    .skillsContainer, .hobbiesContainer {
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-bottom: 5vh;
+        gap: 2.5vh;
+    }
+
+    .skill {
+        width: 200px;
+        height: 110px;
+    }
+
+    .formacionContainer {
+        padding: 5vh 5vw 15vh 5vw;
+    }
+
+    .formacion {
+        gap: 2vw;
+    }
+
+    .nombreCurso , .nombreProyecto {
+        font-size: 16px;
+    }
+
+    .cursos {
+        width: 224px;
+        height: 118px;
+    }
+
+    .cursos p {
+        font-size: 14px;
+    }
+    
+    .formacionImg {
+        width: 224px;
+        height: 118px;
+        object-fit: contain;
+    }
+
+    .proyectosContainer {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+
+    .proyectos {
+        margin: 2vh auto;
+        display: block;
+    }
+    .proyectos {
+        display: flex;
+        order: 1;
+    }
+
+    .detallesContainer {
+        display: flex;
+        order: 2;
+        margin-bottom: 5vh;
+    }
+
+    .xpTitulo {
+        margin: 2vh 0;
+    }
+
+    .proyectoImg {
+        width: 90vw;
+    }
+
+    .detallesContainer p {
+        font-size: 14px;
+    }
+
+    .repoBtn {
+        width: 108px;
+        height: 40px;
+        font-size: 14px;
+    }
+
+    .demoBtn {
+        width: 96px;
+        height: 40px;
+        font-size: 14px;
+    }
+
+    .contactoContainer {
+        padding: 5vh 5vw;
+    }
+
+    .telefonoContainer {
+        display: none;
+    }
+
+    .formContainer {
+        margin-left: 0;
+    }
+
+    .contactoTitulo {
+        font-size: 22px;
+    }
+
+    .formContainer p {
+        font-size: 14px;
+    }
+
+    .nombre, .email, .asunto, .mensaje {
+        width: 90vw;
+    }
+
+    .volverInicio {
+        width: 35px;
+        right: 8px;
+        bottom: 8px;
+    }
 }
